# discord-nitro-gen

./: Cargo.toml
src/: main.rs
