[package]
name = "discord-nitro-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "socks"] }
serde = "1.0.207"
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["full", "macros", "rt-multi-thread"] }
tokio-socks = "0.5.2"
url = "2.5.2"
